# boomstick

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  LICENSE  Makefile  README  _main.cpp  aabb2D.cpp  aabb3D.cpp  bc_roundrobin.hpp  bits.cpp  bits.hpp  boomstick.kdev4  boundary.hpp  cache.hpp  cache2D.hpp  cache3D.hpp  capsule2D.cpp  capsule3D.cpp  circle2D.cpp  col2D.cpp  col3D.cpp  collision.cpp  collision.hpp  common.hpp  cone3D.cpp  convex.hpp  convex2D.cpp  convex3D.cpp  cylinder3D.cpp  frustum3D.cpp  geom.hpp  geom2D.cpp  geom2D.hpp  geom3D.cpp  geom3D.hpp  gjk2D.cpp  gjk3D.cpp  handle.hpp  (+21 more)
.kdev4/: _custom.kdev4  boomstick.kdev4
ntree/: arrayentry.hpp  dim2.cpp  dim2.hpp  hashentry.hpp  ntree.cpp  ntree.hpp  ntreemap.hpp
tests/: aabb2D_test.cpp  broad_test.cpp  capsule2D_test.cpp  circle2D.cpp  circle2D_test.cpp  concavepolygon.cpp  convex2D_test.cpp  epa2D_test.cpp  frustum3D_test.cpp  monopolygon.cpp  narrow_test.cpp  point2D_test.cpp  polygon2D.cpp  polygon2D_test.cpp  roundrobin_test.cpp  segment2D_test.cpp  sphere3D_test.cpp  test.hpp  test2D.hpp  test3D.hpp
